--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,9 @@
 [profile.default]
+remappings = [
+    "@chainlink=lib/chainlink-brownie-contracts",
+    "@solmate=lib/solmate/src",
+]
 src = "src"
 out = "out"
 libs = ["lib"]
-
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
